# iris-key-editor

./: .gitignore  CLAUDE.md  README.md  RESUME.md  TODO.md  index.html  package-lock.json  package.json  thumb-editor.html  vite.config.js
.claude/agents/: firmware-planner.md
original-files/: Cargo.toml  DebugConsole.jsx  KeyButton.css  KeyButton.jsx  KeySelector.jsx  KeyboardGrid.css  KeyboardGrid.jsx  LayerPanel.jsx  MIGRATION_VIA.md  MacroEditor.jsx  SETUP_AND_TESTING.md  dfu_flasher.rs  main.rs  usb_handler.rs
scripts/: build-fw-env-pack.ps1  td-codegen-test.mjs
src/: App.css  App.jsx  extraMacroCodec.js  keyDerived.js  keyboardLayout.js  keycodeDescriptions.js  keycodeToC.js  macroCodec.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dfu_flasher.rs  fw_env.rs  main.rs  usb_handler.rs  via_protocol.rs
src/codegen/: buildAllSources.js  keymapLayers.js  perKeyColors.js  scrollText.js  tapDanceKeys.js
src/components/: ColorPicker.css  ColorPicker.jsx  CombosEditor.css  CombosEditor.jsx  DebugConsole.jsx  DevicePanel.jsx  FirmwarePanel.css  FirmwarePanel.jsx  KeyButton.css  KeyButton.jsx  KeyPicker.css  KeyPicker.jsx  KeySelector.jsx  KeyTest.css  KeyTest.jsx  KeyboardGrid.css  KeyboardGrid.jsx  KeyboardOverlay.css  KeyboardOverlay.jsx  LightingPanel.css  LightingPanel.jsx  MacroEditor.css  MacroEditor.jsx  SettingsPanel.jsx  TapDanceEditor.css  TapDanceEditor.jsx  TapDanceKeyPanel.css  TapDanceKeyPanel.jsx  components.css
