[package]
name = "iris-editor-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-set-position", "window-unmaximize", "window-set-position", "window-set-size", "window-set-min-size", "window-set-always-on-top", "window-start-dragging", "window-set-resizable", "window-maximize", "window-set-decorations", "dialog-open", "dialog-save"] }
tokio = { version = "1", features = ["full"] }

# Raw-HID communication for the VIA protocol.
# hidapi bundles its native backend, so no system HIDAPI install is required.
hidapi = "2.6"

# Extracting the firmware build-environment pack (fw_env.rs).
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
